--- a/Project3.ipynb
+++ b/Project3.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOdX4/8ainffGejlRXtWEdc",
+      "authorship_tag": "ABX9TyMktdHRFKowF4D+heCknvi4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,9 +29,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **project** 3\n",
-        "\n",
-        "Big Sales Prediction using Random Forest Regressor\n"
+        "# Big Sales Prediction using Random Forest Regressor\n",
+        "---"
       ],
       "metadata": {
         "id": "KOXhbcvuEXVc"
